--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Experimental orchestration layer for Artsy web clients",
   "main": "index.coffee",
   "scripts": {
-    "test": "foreman run mocha test/**/* --env .env.test",
+    "test-root": "foreman run mocha test/**/* -e .env.test",
+    "test-apps": "foreman run mocha apps/*/test/**/* -e .env.test",
+    "test": "npm run test-root && npm run test-apps",
     "foo": "echo $1",
     "start": "foreman run coffee index.coffee"
   },
