--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 PORT=5001
 DEBUG=app,gravity
 ARTSY_URL=http://localhost:5000
-MONGOHQ_URL=mongodb://localhost:27017/artsy-conductor-test
+MONGOHQ_URL=mongodb://localhost:27017/fusion-test
 NODE_PATH=$NODE_PATH:./lib
 
 # Private config, ask someone in #web slack to DM it
