--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3006
 DEBUG=app,gravity
 ARTSY_URL=https://api.artsy.net
-MONGOHQ_URL=mongodb://localhost:27017/artsy-conductor
+MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
 
 # Private config, ask someone in #web slack to DM it
