--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,5 @@ DEBUG=app,gravity
 ARTSY_URL=https://api.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
-
-# Private config, ask someone in #web slack to DM it
-ARTSY_ID=
-ARTSY_SECRET=
+ARTSY_ID=REPLACE
+ARTSY_SECRET=REPLACE
