--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
+NODE_PATH=$NODE_PATH:.
 PORT=3006
 DEBUG=app,gravity
 ARTSY_URL=https://api.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
+
 ARTSY_ID=REPLACE
 ARTSY_SECRET=REPLACE
