--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,5 @@ ARTSY_URL=http://localhost:5000
 MONGOHQ_URL=mongodb://localhost:27017/fusion-test
 NODE_PATH=$NODE_PATH:./lib
 
-# Private config, ask someone in #web slack to DM it
-ARTSY_ID=
-ARTSY_SECRET=
+ARTSY_ID=REPLACE
+ARTSY_SECRET=REPLACE
