--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 NODE_PATH=$NODE_PATH:.
-PORT=3006
-DEBUG=app,gravity
-ARTSY_URL=https://api.artsy.net
+PORT=3000
+ARTSY_URL=https://stagingapi.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
+DEBUG=fetch
+PAGE_SIZE=100
+REQUEST_THROTTLE=500
 
 ARTSY_ID=REPLACE
 ARTSY_SECRET=REPLACE
