--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Orchestration layer for Artsy web clients",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "scrape": "nf run babel-node lib/artworks.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/artsy/fusion/issues"
   },
-  "homepage": "https://github.com/artsy/fusion#readme"
+  "homepage": "https://github.com/artsy/fusion#readme",
+  "dependencies": {
+    "artsy-xapp": "^1.0.4",
+    "async": "^1.4.2",
+    "babel": "^5.8.23",
+    "debug": "^2.2.0",
+    "foreman": "^1.4.1",
+    "moment": "^2.10.6",
+    "mongojs": "^1.3.0",
+    "superagent": "^1.3.0"
+  }
 }
