this seems to work

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,12 @@ NODE_PATH=$NODE_PATH:.
 PORT=3000
 ARTSY_URL=https://stagingapi.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
-NODE_PATH=$NODE_PATH:./lib
+NODE_PATH=$NODE_PATH:.
 DEBUG=fetch
 PAGE_SIZE=100
 REQUEST_THROTTLE=500
+FETCH_UNIT=days
+PARALLEL_LIMIT=10
 
 ARTSY_ID=REPLACE
 ARTSY_SECRET=REPLACE
