--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ NODE_PATH=$NODE_PATH:.
 PORT=3000
 ARTSY_URL=https://stagingapi.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
-NODE_PATH=$NODE_PATH:.
-DEBUG=fetch
+NODE_PATH=$NODE_PATH:./lib
+DEBUG=fetch,app
 PAGE_SIZE=100
 REQUEST_THROTTLE=500
 FETCH_UNIT=days
