--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "scrape": "nf run babel-node lib/artworks.js"
+    "scrape": "nf run babel-node lib/artworks/scrape.js",
+    "start": "nf run babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
     "async": "^1.4.2",
     "babel": "^5.8.23",
     "debug": "^2.2.0",
+    "express": "^4.13.3",
     "foreman": "^1.4.1",
+    "joi": "^6.7.0",
     "moment": "^2.10.6",
     "mongojs": "^1.3.0",
     "superagent": "^1.3.0"
