--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
+APP_NAME=fusion-development
 NODE_PATH=$NODE_PATH:.
 PORT=3000
 ARTSY_URL=https://stagingapi.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
 DEBUG=fetch,app
+GRAVITY_PAGE_SIZE=100
 PAGE_SIZE=100
+MAX_PAGE_SIZE=1000
 REQUEST_THROTTLE=500
 FETCH_UNIT=days
 PARALLEL_LIMIT=10
 
 ARTSY_ID=REPLACE
 ARTSY_SECRET=REPLACE
+NEW_RELIC_LICENSE_KEY=REPLACE
