--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "mocha",
     "scrape": "nf run babel-node lib/artworks/scrape.js",
-    "start": "nf run babel-node index.js"
+    "start": "nf run babel-node index.js",
+    "deploys": "git push git@heroku.com:fusion-staging.git master -f",
+    "deployp": "git push git@heroku.com:fusion-production.git master -f"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "joi": "^6.7.0",
     "moment": "^2.10.6",
     "mongojs": "^1.3.0",
+    "newrelic": "^1.22.0",
     "superagent": "^1.3.0"
   }
 }
