--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.10.6",
     "mongojs": "^1.3.0",
     "newrelic": "^1.22.0",
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "underscore": "^1.8.3"
   }
 }
