--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PORT=3000
 ARTSY_URL=https://stagingapi.artsy.net
 MONGOHQ_URL=mongodb://localhost:27017/fusion
 NODE_PATH=$NODE_PATH:./lib
-DEBUG=fetch,app
+DEBUG=app,scrape,db
 GRAVITY_PAGE_SIZE=100
 PAGE_SIZE=100
 MAX_PAGE_SIZE=1000
