--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "artsy-xapp": "^1.0.4",
     "async": "^1.4.2",
     "babel": "^5.8.23",
+    "bucket-assets": "^0.2.9",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "foreman": "^1.4.1",
