--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha",
     "scrape": "nf run babel-node lib/artworks/scrape.js",
+    "dbcopy": "nf run babel-node lib/db/copy.js",
     "start": "nf run babel-node index.js",
     "deploys": "git push git@heroku.com:fusion-staging.git master -f",
     "deployp": "git push git@heroku.com:fusion-production.git master -f"
@@ -35,6 +36,7 @@
     "foreman": "^1.4.1",
     "joi": "^6.7.0",
     "moment": "^2.10.6",
+    "mongo-utils": "^0.5.0",
     "mongojs": "^1.3.0",
     "newrelic": "^1.22.0",
     "superagent": "^1.3.0",
