--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.10.6",
     "mongo-utils": "^0.5.0",
     "mongojs": "^1.3.0",
+    "morgan": "^1.6.1",
     "newrelic": "^1.22.0",
     "superagent": "^1.3.0",
     "underscore": "^1.8.3"
