--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "foreman": "^1.4.1",
+    "http-proxy": "^1.11.2",
     "joi": "^6.7.0",
     "moment": "^2.10.6",
     "mongo-utils": "^0.5.0",
