--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "async": "^1.4.2",
     "babel": "^5.8.23",
     "bucket-assets": "^0.2.9",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "foreman": "^1.4.1",
