enforce ssl, only proxy artwork routes + hsts

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "express-force-ssl": "^0.3.0",
     "foreman": "^1.4.1",
     "forever": "^0.15.1",
+    "hsts": "^0.2.0",
     "http-proxy": "^1.11.2",
     "joi": "^6.7.0",
     "moment": "^2.10.6",
