--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ MAX_PAGE_SIZE=1000
 REQUEST_THROTTLE=500
 FETCH_UNIT=days
 PARALLEL_LIMIT=10
+THROTTLE_TIME=5000
 
 ARTSY_ID=REPLACE
 ARTSY_SECRET=REPLACE
